--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="banner-content">
                     <h1>WE SELL LIFESTYLE</h1>
                     <p>Flat 40% OFF on Premium brands</p>
-                    <a class="button" >Shop Now</a>
+                    <a class="button" href="#" >Shop Now</a>
                 </div>
             </div>
             
