--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="container">
                 <div class="items">
                     <a href="#" >
-                        <img src="img/1.jpg" alt="" class="thumbnail">
+                        <img src="shirt.jpg" alt="" class="thumbnail">
                         <div class="caption">
                             <h2>Cameras</h2>
                             <p>Choose among the best available in the world.</p>
@@ -43,7 +43,7 @@
                 </div>
                 <div class="items">
                     <a href="" >
-                        <img src="img/10.jpg" alt="" class="thumbnail">
+                        <img src="watch.jpg" alt="" class="thumbnail">
                         <div class="caption">
                             <h2>Watches</h2>
                             <p>Original watches from the best brands.</p>
@@ -52,7 +52,7 @@
                 </div>
                 <div class="items">
                     <a href="" >
-                        <img src="img/13.jpg" alt="" class="thumbnail">
+                        <img src="watch.jpg" alt="" class="thumbnail">
                         <div class="caption">
                             <h2>Shirts</h2>
                             <p>Our exquisite collection of shirts.</p>
