--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Welcome | Life Style Store</title>
         <!-- Custom CSS -->
-        <link href="css/index.css" rel="stylesheet">
+        <link href="index.css" rel="stylesheet">
     </head>
     <body>
         <div class="header">
